@@ -1537,6 +1537,29 @@ op_amp
 id|server-&gt;secType
 )paren
 suffix:semicolon
+r_if
+c_cond
+(paren
+id|rc
+op_eq
+l_int|1
+)paren
+(brace
+multiline_comment|/* BB Need to fill struct for sessetup here */
+id|rc
+op_assign
+op_minus
+id|EOPNOTSUPP
+suffix:semicolon
+)brace
+r_else
+(brace
+id|rc
+op_assign
+op_minus
+id|EINVAL
+suffix:semicolon
+)brace
 )brace
 )brace
 r_else
